<?xml version="1.0"?>
<package format="2">
  <name>mapless_mcl_project</name>
  <version>0.0.0</version>
  <description>The mapless_mcl_project package</description>

  <license>MIT</license>
  <author email="carlos.andre.filho@usp.br">André Przewodowski</author>
  <maintainer email="carlos.andre.filho@usp.br">André Przewodowski</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
    <metapackage />
  </export>
</package>

